- Added ReflectionMethod::setAccessible() for invoking non-public methods
  through the Reflection API. (Sebastian)

- Implemented FR #49571 (CURLOPT_POSTREDIR not implemented). (Sriram Natarajan)
- Implemented FR #49253 (added support for libcurl's CERTINFO option).
  (Linus Nielsen Feltzing <linus@haxx.se>)
  
- Fixed memory leak in extension loading when an error occurs on Windows.
  (Pierre)

- Fixed bug #49855 (import_request_variables() always returns NULL). (Ilia,
  sjoerd at php dot net)
- Fixed bug #49800 (SimpleXML allow (un)serialize() calls without warning).
  (Ilia, wmeler at wp-sa dot pl)
- Fixed bug #49647 (DOMUserData does not exist). (Rob)
- Fixed bug #49224 (Compile error due to old DNS functions on AIX systems).
  (Scott)

?? ??? 2009, PHP 5.3.1
# Will be merged in from branches/PHP_5_3_1 once released
# Pleas add stuff under 5.3.2

30 Jun 2009, PHP 5.3.0
- Upgraded bundled PCRE to version 7.9. (Nuno)
- Upgraded bundled sqlite to version 3.6.15. (Scott)

- Moved extensions to PECL (Derick, Lukas, Pierre, Scott):
  . ext/dbase
  . ext/fbsql
  . ext/fdf
  . ext/ncurses
  . ext/mhash (BC layer is now entirely within ext/hash)
  . ext/ming
  . ext/msql
  . ext/sybase (not maintained anymore, sybase_ct has to be used instead)

- Removed the experimental RPL (master/slave) functions from mysqli. (Andrey)
- Removed zend.ze1_compatibility_mode. (Dmitry)
- Removed all zend_extension_* php.ini directives. Zend extensions are now
  always loaded using zend_extension directive. (Derick)
- Removed special treatment of "/tmp" in sessions for open_basedir.
  Note: This undocumented behaviour was introduced in 5.2.2. (Alexey)
- Removed shebang line check from CGI sapi (checked by scanner). (Dmitry)

- Changed PCRE, Reflection and SPL extensions to be always enabled. (Marcus)
- Changed md5() to use improved implementation. (Solar Designer, Dmitry)
- Changed HTTP stream wrapper to accept any code between and including